# neo

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TICKETS.md  go.mod  go.sum  install.sh  justfile
.claude/agents/: check-runner.md  code-implementer.md  correctness-reviewer.md  failure-analyst.md  independent-reviewer.md  security-reviewer.md  test-runner.md
.github/workflows/: backlog-manager.yml  ci.yml  docs-site.yml  docs.yml  nightly.yml  release.yml
cmd/neo/: doctor.go  factory.go  factory_test.go  main.go  main_test.go  performance_test.go  provider.go  sessions.go  update.go  update_test.go
cmd/neo-docs/: main.go  main_test.go
crates/neo-coding/: Cargo.toml
crates/neo-core/: Cargo.toml
crates/opus-coding/: Cargo.toml
crates/opus-core/: Cargo.toml
demo/: README.md  demo.md  prompt-1-depth-probe.md  prompt-2-issue-to-pr.md
docs/: docs-consistency-audit.md  index.md  performance.md  release.md  robust-core-plan.md  step-templates.md  workflow.md
docs/design/: goal-runner.md  loop-runner.md
docs/developer/: architecture.md  cli.md  config.md  index.md  prompt-caching.md  sessions.md  tools.md
docs/parallel-execution-ui/: design.md
examples/: neo-smoke-flow.yml
flows/: full.yaml  implementation.yaml
phases/: build.md  eval.md  finalize.md  review.md
scripts/: performance.sh
src/: agent.rs  approval.rs  config.rs  guard.rs  main.rs
src/model/: mod.rs  (+2 more)
steps/: checks  demo.md  explore.md  review.md
website/: .gitignore  README.md  astro.config.mjs  package.json
(+201 files in other folders)
