[workspace]
members = ["crates/opus-core", "crates/opus-coding"]

[package]
name = "opus"
version = "0.1.0"
edition = "2024"

[dependencies]
opus-core = { path = "crates/opus-core" }
opus-coding = { path = "crates/opus-coding" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
