[workspace]
members = ["crates/neo-core", "crates/neo-coding"]

[package]
name = "neo"
version = "0.1.0"
edition = "2024"

[dependencies]
neo-core = { path = "crates/neo-core" }
neo-coding = { path = "crates/neo-coding" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
